// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateWidget renders a date view widget component 1`] = `
<span
  className="metadata date widget"
>
  Aug 18, 2020
</span>
`;

exports[`DateWidget renders a date view widget component with L format 1`] = `
<span
  className="metadata date widget"
>
  08/18/2020
</span>
`;

exports[`DateWidget renders a date view widget component with children 1`] = `
<span
  className="metadata date widget"
>
  <strong>
    Aug 18, 2020
  </strong>
</span>
`;

exports[`DateWidget renders an empty date view widget component 1`] = `""`;
